logs/dag_id=user_processing/run_id=scheduled__2022-08-28T00:00:00+00:00/task_id=store_user/attempt=1.log
[2022-08-29 15:55:14,041] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: user_processing.store_user scheduled__2022-08-28T00:00:00+00:00 [queued]>
[2022-08-29 15:55:14,053] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: user_processing.store_user scheduled__2022-08-28T00:00:00+00:00 [queued]>
[2022-08-29 15:55:14,053] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-08-29 15:55:14,053] {taskinstance.py:1357} INFO - Starting attempt 1 of 1
[2022-08-29 15:55:14,053] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-08-29 15:55:14,075] {taskinstance.py:1377} INFO - Executing <Task(PythonOperator): store_user> on 2022-08-28 00:00:00+00:00
[2022-08-29 15:55:14,083] {standard_task_runner.py:52} INFO - Started process 2175 to run task
[2022-08-29 15:55:14,090] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'user_processing', 'store_user', 'scheduled__2022-08-28T00:00:00+00:00', '--job-id', '95', '--raw', '--subdir', 'DAGS_FOLDER/user_processing.py', '--cfg-path', '/tmp/tmp50b1avw_', '--error-file', '/tmp/tmpv5jjvj4t']
[2022-08-29 15:55:14,092] {standard_task_runner.py:80} INFO - Job 95: Subtask store_user
[2022-08-29 15:55:14,321] {task_command.py:369} INFO - Running <TaskInstance: user_processing.store_user scheduled__2022-08-28T00:00:00+00:00 [running]> on host 7f0ff65cfbf7
[2022-08-29 15:55:14,452] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=user_processing
AIRFLOW_CTX_TASK_ID=store_user
AIRFLOW_CTX_EXECUTION_DATE=2022-08-28T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-08-28T00:00:00+00:00
[2022-08-29 15:55:14,454] {postgres.py:127} INFO - Running copy expert: COPY users from stdin WITH DELIMETER AS ",", filename: /tmp/processed_user.csv
[2022-08-29 15:55:14,468] {base.py:68} INFO - Using connection ID 'postgres' for task execution.
[2022-08-29 15:55:14,474] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/user_processing.py", line 30, in _store_user
    filename = '/tmp/processed_user.csv')
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/hooks/postgres.py", line 135, in copy_expert
    cur.copy_expert(sql, file)
psycopg2.errors.SyntaxError: syntax error at or near "DELIMETER"
LINE 1: COPY users from stdin WITH DELIMETER AS ","
                                   ^

[2022-08-29 15:55:14,487] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=user_processing, task_id=store_user, execution_date=20220828T000000, start_date=20220829T155514, end_date=20220829T155514
[2022-08-29 15:55:14,504] {standard_task_runner.py:97} ERROR - Failed to execute job 95 for task store_user (syntax error at or near "DELIMETER"
LINE 1: COPY users from stdin WITH DELIMETER AS ","
                                   ^
; 2175)
[2022-08-29 15:55:14,545] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-08-29 15:55:14,589] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
